# epistemic_memory

./: .gitignore  Dockerfile  LICENSE  README.md  demo.py  docker-compose.yml  example_with_ai.py  mcp_server.py  pyproject.toml  requirements.txt  run.py  setup.py
memory_layer/: __init__.py  __main__.py  active_memory.py  api.py  chat.py  chat_web.py  cli.py  config.py  consolidation.py  core.py  decay.py  document_ingest.py  embeddings.py  enrichment.py  entity_graph.py  export.py  faiss_index.py  gemini_embeddings.py  graph.py  graph_reasoner.py  knowledge_pages.py  lint.py  llm_extract.py  models.py  openai_embeddings.py  passport.py  predictive.py  proxy.py  reasoning_engine.py  reranker.py  s3_sync.py  storage.py  storage_dynamo.py  storage_factory.py  storage_postgres.py  storage_protocol.py  temporal.py  wiki_export.py  youtube_video.py
memory_layer/integrations/: __init__.py  autogen_adapter.py  crewai_adapter.py  langchain_adapter.py  llamaindex_adapter.py  openai_adapter.py  vercel_ai_adapter.py
paper/: README_RUN.md  epistemic_memory_combined.tex  experiments.py  longmemeval_runner.py  results.json
paper/fair_eval/: results_selfcontained.json  run_fair_ablation_selfcontained.py
tests/: conftest.py  test_backends.py  test_chat_export.py  test_confidence_ranking.py  test_config.py  test_core.py  test_e2e.py  test_epistemic.py  test_functional.py  test_integrations.py  test_knowledge_pages.py  test_lint.py  test_provenance.py  test_retrieval.py  test_storage.py
tests/benchmarks/: mcp_vs_cli_latency.py
tests/benchmarks/results/: mcp_vs_cli_20260320_223036.json
tests/test_docs/: company_handbook.md  project_phoenix.md  team_profiles.csv
