[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-layer"
version = "0.3.0"
description = "Persistent, evolving memory for AI — local-first, no cloud required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ai", "memory", "llm", "rag", "faiss", "embeddings", "mcp", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.5",
]
openai = [
    "openai>=1.0.0",
]
gemini = [
    "google-genai>=1.0.0",
]
passport = [
    "cryptography>=41.0.0",
]
docs = [
    "pypdf>=3.0.0",
    "python-docx>=0.8.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.6.0",
]
anthropic = [
    "anthropic>=0.25.0",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
dynamodb = [
    "boto3>=1.28.0",
]
s3 = [
    "boto3>=1.28.0",
]
aws = [
    "memory-layer[dynamodb,s3]",
]
all = [
    "memory-layer[api,openai,gemini,anthropic,docs,aws,postgres,passport]",
]
dev = [
    "memory-layer[all]",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
memory-layer = "memory_layer.cli:main"

[project.urls]
Homepage = "https://github.com/insane-memory/memory-layer"
Repository = "https://github.com/insane-memory/memory-layer"

[tool.setuptools.packages.find]
include = ["memory_layer*"]

[tool.setuptools.package-data]
memory_layer = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
